--- a/99.md
+++ b/99.md
@@ -1,5 +1,5 @@
 # 99 problèmes pour débuter en programmation impérative
-Ces problèmes servent notamment pour le cours de complément au [cours INF1](https://inf1.begincoding.net) que [je](https://www.hevs.ch/fr/recherche-appliquee-et-developpement-a-la-hes-so-valais-wallis/institut-systemes-industriels-valais/collaborateurs/professeure-hes/mudry-1640/) donne à la [HES-SO Valais](https://www.hevs.ch/).
+Ces problèmes servent notamment pour le cours de complément au [cours 101.1](https://isc.hevs.ch/learn) donné à la [HES-SO Valais](https://www.hevs.ch/).
 
 Ces exercices servent à exercer les concepts de base de la programmation impérative. Ils sont classés par catégoriges et chaque problème est annoté avec son niveau de difficulté estimé (nombre d'étoiles :star:): Attention, ce nombre d'étoiles est *indicatif* et il est possible que vous ayez une opinion différente de moi !
 
